[package]
name = "actix-loginmanager"
version = "0.0.2"
edition = "2018"
keywords = ["http", "web", "actix", "loginmanager"]
description = "a loginmanager for actix-web"
license = "MIT OR Apache-2.0"
repository = "https://github.com/krealseu/actix-loginmanager"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "actix_loginmanager"
path = "src/lib.rs"


[dependencies.actix-web]
version = "^3.0.0"
default_features = false

[dependencies]
actix-service = "^1.0.6"
actix-http = "^2.2.0"
futures = "^0.3.5"
futures-core = "^0.3.5"
futures-util="^0.3.5"
actix-rt = "1.0"
serde = "^1.0"
serde_json = "^1.0"
rust-crypto = "^0.2"
loginmanager-codegen = { path = "loginmanager-codegen" }

[features]
cookie-session = ["actix-web/secure-cookies"]
default = ["cookie-session"]

[dependencies.time]
version = "^0.2.7"
features = ["std"]
default-features = false