[package]
name = "actix-loginmanager"
description = "a loginmanager for actix-web"
keywords = ["http", "web", "actix", "loginmanager"]
repository = "https://github.com/krealseu/actix-loginmanager"
readme = "README.md"
version = "0.0.4"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "actix_loginmanager"
path = "src/lib.rs"


[dependencies.actix-web]
version = "^4.0.0"
default_features = false

[dependencies]
actix-service = "^1.0.6"
actix-http = "^2.2.0"
futures = "^0.3.5"
futures-core = "^0.3.5"
futures-util="^0.3.5"
actix-rt = "1.0"
serde = {version="^1.0", features = ["derive"] }
serde_json = "^1.0"
rust-crypto = "^0.2"
loginmanager-codegen = { version="^0.0.1", path = "loginmanager-codegen" }

[features]
cookie-session = ["actix-web/secure-cookies"]
default = ["cookie-session"]

[dependencies.time]
version = "^0.3"
features = ["std"]
default-features = false

[dev-dependencies]
tokio = { version = "^1", features = ["full"] }